Refactor build.yml for cleaner configuration
Removed unnecessary blank line and adjusted build options.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,9 @@ jobs:
       - name: Build Custom Image
         uses: blue-build/github-action@v1.10
         with:
-          recipe: ${{ matrix.recipe }}
-          
+          recipe: ${{ matrix.recipe }} 
           registry_token: ${{ github.token }}
           pr_event_number: ${{ github.event.number }}
-
+          build_opts: "--no-sign"
           # enabled by default, disable if your image is small and you want faster builds
           maximize_build_space: true
