--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 name: bluebuild
 on:
   schedule:
-    - cron: "00 06 * * *" # Build at 06:00 UTC every day
+    - cron: "00 06 * * *"
   push:
     paths-ignore:
       - "**.md"
   pull_request:
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
@@ -33,4 +33,6 @@ jobs:
           registry_token: ${{ github.token }}
           pr_event_number: ${{ github.event.number }}
           maximize_build_space: true
-          build_opts: "--no-sign" # The "Cheat Code" for a Green Build
+          # We are putting BOTH here to force the system to see it
+          build_flags: "--no-sign"
+          build_opts: "--no-sign"
